--- a/vanilla-ts/index.html
+++ b/vanilla-ts/index.html
@@ -12,6 +12,8 @@
   <div id="app"></div>
   <input id="todo-input" />
   <button id="add-todo-btn">Add todo</button>
+  <ul id="todo-list">
+  </ul>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
